// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTable given big amount of data, renders with pagination 1`] = `
<div
  class="sc-fznxsB forRdO"
>
  <div
    class="sc-fznWqX gnahTY"
  >
    <div
      class="sc-AxjAm gIMaKV rdt_Table"
      role="table"
    >
      <div
        class="sc-AxirZ eBuPmJ rdt_TableHead"
        role="rowgroup"
      >
        <div
          class="sc-AxiKw cTEQON rdt_TableHeadRow"
          role="row"
        >
          <div
            class="sc-AxhCb sc-AxhUy sc-fzplWN HWHoi rdt_TableCol"
          >
            <div
              class="sc-fznyAO cxtWCz rdt_TableCol_Sortable"
              id="column-title"
              role="button"
              tabindex="0"
            >
              <div>
                Title
              </div>
            </div>
          </div>
          <div
            class="sc-AxhCb sc-AxhUy sc-fzplWN HWHoi rdt_TableCol"
          >
            <div
              class="sc-fznyAO cxtWCz rdt_TableCol_Sortable"
              id="column-year"
              role="button"
              tabindex="0"
            >
              <div>
                Year
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-fzpjYC ieTOoW rdt_TableBody"
        offset="250px"
        role="rowgroup"
      >
        <div
          class="sc-fzoLsD jekBnA rdt_TableRow"
          id="row-1"
          role="row"
        >
          <div
            class="sc-AxhCb sc-AxhUy sc-AxgMl gbbhfF rdt_TableCell"
            data-tag="___react-data-table-allow-propagation___"
            id="cell-1-1"
            role="cell"
          >
            <div
              data-tag="___react-data-table-allow-propagation___"
            >
              Conan the Barbarian
            </div>
          </div>
          <div
            class="sc-AxhCb sc-AxhUy sc-AxgMl gbbhfF rdt_TableCell"
            data-tag="___react-data-table-allow-propagation___"
            id="cell-2-1"
            role="cell"
          >
            <div
              data-tag="___react-data-table-allow-propagation___"
            >
              1982
            </div>
          </div>
        </div>
        <div
          class="sc-fzoLsD jekBnA rdt_TableRow"
          id="row-2"
          role="row"
        >
          <div
            class="sc-AxhCb sc-AxhUy sc-AxgMl gbbhfF rdt_TableCell"
            data-tag="___react-data-table-allow-propagation___"
            id="cell-1-2"
            role="cell"
          >
            <div
              data-tag="___react-data-table-allow-propagation___"
            >
              Conan the Barbarian 2
            </div>
          </div>
          <div
            class="sc-AxhCb sc-AxhUy sc-AxgMl gbbhfF rdt_TableCell"
            data-tag="___react-data-table-allow-propagation___"
            id="cell-2-2"
            role="cell"
          >
            <div
              data-tag="___react-data-table-allow-propagation___"
            >
              1984
            </div>
          </div>
        </div>
        <div
          class="sc-fzoLsD jekBnA rdt_TableRow"
          id="row-3"
          role="row"
        >
          <div
            class="sc-AxhCb sc-AxhUy sc-AxgMl gbbhfF rdt_TableCell"
            data-tag="___react-data-table-allow-propagation___"
            id="cell-1-3"
            role="cell"
          >
            <div
              data-tag="___react-data-table-allow-propagation___"
            >
              Conan the Barbarian 3
            </div>
          </div>
          <div
            class="sc-AxhCb sc-AxhUy sc-AxgMl gbbhfF rdt_TableCell"
            data-tag="___react-data-table-allow-propagation___"
            id="cell-2-3"
            role="cell"
          >
            <div
              data-tag="___react-data-table-allow-propagation___"
            >
              1985
            </div>
          </div>
        </div>
        <div
          class="sc-fzoLsD jekBnA rdt_TableRow"
          id="row-4"
          role="row"
        >
          <div
            class="sc-AxhCb sc-AxhUy sc-AxgMl gbbhfF rdt_TableCell"
            data-tag="___react-data-table-allow-propagation___"
            id="cell-1-4"
            role="cell"
          >
            <div
              data-tag="___react-data-table-allow-propagation___"
            >
              Conan the Barbarian
            </div>
          </div>
          <div
            class="sc-AxhCb sc-AxhUy sc-AxgMl gbbhfF rdt_TableCell"
            data-tag="___react-data-table-allow-propagation___"
            id="cell-2-4"
            role="cell"
          >
            <div
              data-tag="___react-data-table-allow-propagation___"
            >
              1982
            </div>
          </div>
        </div>
        <div
          class="sc-fzoLsD jekBnA rdt_TableRow"
          id="row-5"
          role="row"
        >
          <div
            class="sc-AxhCb sc-AxhUy sc-AxgMl gbbhfF rdt_TableCell"
            data-tag="___react-data-table-allow-propagation___"
            id="cell-1-5"
            role="cell"
          >
            <div
              data-tag="___react-data-table-allow-propagation___"
            >
              Conan the Barbarian 2
            </div>
          </div>
          <div
            class="sc-AxhCb sc-AxhUy sc-AxgMl gbbhfF rdt_TableCell"
            data-tag="___react-data-table-allow-propagation___"
            id="cell-2-5"
            role="cell"
          >
            <div
              data-tag="___react-data-table-allow-propagation___"
            >
              1984
            </div>
          </div>
        </div>
        <div
          class="sc-fzoLsD jekBnA rdt_TableRow"
          id="row-6"
          role="row"
        >
          <div
            class="sc-AxhCb sc-AxhUy sc-AxgMl gbbhfF rdt_TableCell"
            data-tag="___react-data-table-allow-propagation___"
            id="cell-1-6"
            role="cell"
          >
            <div
              data-tag="___react-data-table-allow-propagation___"
            >
              Conan the Barbarian 3
            </div>
          </div>
          <div
            class="sc-AxhCb sc-AxhUy sc-AxgMl gbbhfF rdt_TableCell"
            data-tag="___react-data-table-allow-propagation___"
            id="cell-2-6"
            role="cell"
          >
            <div
              data-tag="___react-data-table-allow-propagation___"
            >
              1985
            </div>
          </div>
        </div>
        <div
          class="sc-fzoLsD jekBnA rdt_TableRow"
          id="row-7"
          role="row"
        >
          <div
            class="sc-AxhCb sc-AxhUy sc-AxgMl gbbhfF rdt_TableCell"
            data-tag="___react-data-table-allow-propagation___"
            id="cell-1-7"
            role="cell"
          >
            <div
              data-tag="___react-data-table-allow-propagation___"
            >
              Conan the Barbarian
            </div>
          </div>
          <div
            class="sc-AxhCb sc-AxhUy sc-AxgMl gbbhfF rdt_TableCell"
            data-tag="___react-data-table-allow-propagation___"
            id="cell-2-7"
            role="cell"
          >
            <div
              data-tag="___react-data-table-allow-propagation___"
            >
              1982
            </div>
          </div>
        </div>
        <div
          class="sc-fzoLsD jekBnA rdt_TableRow"
          id="row-8"
          role="row"
        >
          <div
            class="sc-AxhCb sc-AxhUy sc-AxgMl gbbhfF rdt_TableCell"
            data-tag="___react-data-table-allow-propagation___"
            id="cell-1-8"
            role="cell"
          >
            <div
              data-tag="___react-data-table-allow-propagation___"
            >
              Conan the Barbarian 2
            </div>
          </div>
          <div
            class="sc-AxhCb sc-AxhUy sc-AxgMl gbbhfF rdt_TableCell"
            data-tag="___react-data-table-allow-propagation___"
            id="cell-2-8"
            role="cell"
          >
            <div
              data-tag="___react-data-table-allow-propagation___"
            >
              1984
            </div>
          </div>
        </div>
        <div
          class="sc-fzoLsD jekBnA rdt_TableRow"
          id="row-9"
          role="row"
        >
          <div
            class="sc-AxhCb sc-AxhUy sc-AxgMl gbbhfF rdt_TableCell"
            data-tag="___react-data-table-allow-propagation___"
            id="cell-1-9"
            role="cell"
          >
            <div
              data-tag="___react-data-table-allow-propagation___"
            >
              Conan the Barbarian 3
            </div>
          </div>
          <div
            class="sc-AxhCb sc-AxhUy sc-AxgMl gbbhfF rdt_TableCell"
            data-tag="___react-data-table-allow-propagation___"
            id="cell-2-9"
            role="cell"
          >
            <div
              data-tag="___react-data-table-allow-propagation___"
            >
              1985
            </div>
          </div>
        </div>
        <div
          class="sc-fzoLsD jekBnA rdt_TableRow"
          id="row-10"
          role="row"
        >
          <div
            class="sc-AxhCb sc-AxhUy sc-AxgMl gbbhfF rdt_TableCell"
            data-tag="___react-data-table-allow-propagation___"
            id="cell-1-10"
            role="cell"
          >
            <div
              data-tag="___react-data-table-allow-propagation___"
            >
              Conan the Barbarian
            </div>
          </div>
          <div
            class="sc-AxhCb sc-AxhUy sc-AxgMl gbbhfF rdt_TableCell"
            data-tag="___react-data-table-allow-propagation___"
            id="cell-2-10"
            role="cell"
          >
            <div
              data-tag="___react-data-table-allow-propagation___"
            >
              1982
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <nav
    class="sc-fzoNJl dGqwdB rdt_Pagination"
  >
    <span
      class="sc-fznxKY sc-fznWOq ncoBp"
    >
      Rows per page:
    </span>
    <div
      class="sc-fzoyTs gVljTM"
    >
      <select
        class="sc-fzqNqU gCcqTE"
      >
        <option
          selected=""
          value="10"
        >
          10
        </option>
        <option
          value="15"
        >
          15
        </option>
        <option
          value="20"
        >
          20
        </option>
        <option
          value="25"
        >
          25
        </option>
        <option
          value="30"
        >
          30
        </option>
      </select>
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </div>
    <span
      class="sc-fznxKY sc-fznMAR jMFmnk"
    >
      1-10 of 11
    </span>
    <div
      class="sc-fzpmMD ftIMtk"
    >
      <button
        aria-disabled="true"
        aria-label="First Page"
        class="sc-fzoXWK embYcA"
        disabled=""
        id="pagination-first-page"
        type="button"
      >
        <svg
          aria-hidden="true"
          height="24"
          role="presentation"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18.41 16.59L13.82 12l4.59-4.59L17 6l-6 6 6 6zM6 6h2v12H6z"
          />
          <path
            d="M24 24H0V0h24v24z"
            fill="none"
          />
        </svg>
      </button>
      <button
        aria-disabled="true"
        aria-label="Previous Page"
        class="sc-fzoXWK embYcA"
        disabled=""
        id="pagination-previous-page"
        type="button"
      >
        <svg
          aria-hidden="true"
          height="24"
          role="presentation"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </button>
      <button
        aria-disabled="false"
        aria-label="Next Page"
        class="sc-fzoXWK embYcA"
        id="pagination-next-page"
        type="button"
      >
        <svg
          aria-hidden="true"
          height="24"
          role="presentation"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </button>
      <button
        aria-disabled="false"
        aria-label="Last Page"
        class="sc-fzoXWK embYcA"
        id="pagination-last-page"
        type="button"
      >
        <svg
          aria-hidden="true"
          height="24"
          role="presentation"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5.59 7.41L10.18 12l-4.59 4.59L7 18l6-6-6-6zM16 6h2v12h-2z"
          />
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
        </svg>
      </button>
    </div>
  </nav>
</div>
`;

exports[`DataTable renders 1`] = `
<div
  class="sc-fznxsB forRdO"
>
  <div
    class="sc-fznWqX gnahTY"
  >
    <div
      class="sc-AxjAm gIMaKV rdt_Table"
      role="table"
    >
      <div
        class="sc-AxirZ eBuPmJ rdt_TableHead"
        role="rowgroup"
      >
        <div
          class="sc-AxiKw cTEQON rdt_TableHeadRow"
          role="row"
        >
          <div
            class="sc-AxhCb sc-AxhUy sc-fzplWN HWHoi rdt_TableCol"
          >
            <div
              class="sc-fznyAO cxtWCz rdt_TableCol_Sortable"
              id="column-title"
              role="button"
              tabindex="0"
            >
              <div>
                Title
              </div>
            </div>
          </div>
          <div
            class="sc-AxhCb sc-AxhUy sc-fzplWN HWHoi rdt_TableCol"
          >
            <div
              class="sc-fznyAO cxtWCz rdt_TableCol_Sortable"
              id="column-year"
              role="button"
              tabindex="0"
            >
              <div>
                Year
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-fzpjYC ieTOoW rdt_TableBody"
        offset="250px"
        role="rowgroup"
      >
        <div
          class="sc-fzoLsD jekBnA rdt_TableRow"
          id="row-1"
          role="row"
        >
          <div
            class="sc-AxhCb sc-AxhUy sc-AxgMl gbbhfF rdt_TableCell"
            data-tag="___react-data-table-allow-propagation___"
            id="cell-1-1"
            role="cell"
          >
            <div
              data-tag="___react-data-table-allow-propagation___"
            >
              Conan the Barbarian
            </div>
          </div>
          <div
            class="sc-AxhCb sc-AxhUy sc-AxgMl gbbhfF rdt_TableCell"
            data-tag="___react-data-table-allow-propagation___"
            id="cell-2-1"
            role="cell"
          >
            <div
              data-tag="___react-data-table-allow-propagation___"
            >
              1982
            </div>
          </div>
        </div>
        <div
          class="sc-fzoLsD jekBnA rdt_TableRow"
          id="row-2"
          role="row"
        >
          <div
            class="sc-AxhCb sc-AxhUy sc-AxgMl gbbhfF rdt_TableCell"
            data-tag="___react-data-table-allow-propagation___"
            id="cell-1-2"
            role="cell"
          >
            <div
              data-tag="___react-data-table-allow-propagation___"
            >
              Conan the Barbarian 2
            </div>
          </div>
          <div
            class="sc-AxhCb sc-AxhUy sc-AxgMl gbbhfF rdt_TableCell"
            data-tag="___react-data-table-allow-propagation___"
            id="cell-2-2"
            role="cell"
          >
            <div
              data-tag="___react-data-table-allow-propagation___"
            >
              1984
            </div>
          </div>
        </div>
        <div
          class="sc-fzoLsD jekBnA rdt_TableRow"
          id="row-3"
          role="row"
        >
          <div
            class="sc-AxhCb sc-AxhUy sc-AxgMl gbbhfF rdt_TableCell"
            data-tag="___react-data-table-allow-propagation___"
            id="cell-1-3"
            role="cell"
          >
            <div
              data-tag="___react-data-table-allow-propagation___"
            >
              Conan the Barbarian 3
            </div>
          </div>
          <div
            class="sc-AxhCb sc-AxhUy sc-AxgMl gbbhfF rdt_TableCell"
            data-tag="___react-data-table-allow-propagation___"
            id="cell-2-3"
            role="cell"
          >
            <div
              data-tag="___react-data-table-allow-propagation___"
            >
              1985
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
